==> redorca/Zeus/nuttx/arch/arm/src/nrf52/nrf52_pwm.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/drivers/pwm.h>
#include <arch/chip/chip.h>
#include <arch/board/board.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include "nrf_pwm.h"
#include "nrf52_pwm.h"
#include "chip/nrf52_gpio.h"
#define PWM_CONFIG_IRQ_PRIORITY  7
#define MAX_CLK  (16*1000*1000)
#define MIN_CLK  (125*1000)
#define MAX_TOP_COUNT  (32767)  /* see datasheet : 47.5.7 COUNTERTOP , only 15bits */

static void nrf_pwm_start(struct nrf52_pwm_s *dev)
{
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;
  FAR NRF_PWM_Type *p_registers = (FAR NRF_PWM_Type *)priv->base;

  nrf_pwm_configure(p_registers, priv->prescaler, NRF_PWM_MODE_UP,
                    priv->top_value);
  nrf_pwm_decoder_set(p_registers, NRF_PWM_LOAD_INDIVIDUAL, NRF_PWM_STEP_AUTO);

  nrf_pwm_shorts_set(p_registers, 0);
  nrf_pwm_int_set(p_registers, 0);
  nrf_pwm_event_clear(p_registers, NRF_PWM_EVENT_LOOPSDONE);
  nrf_pwm_event_clear(p_registers, NRF_PWM_EVENT_SEQEND0);
  nrf_pwm_event_clear(p_registers, NRF_PWM_EVENT_SEQEND1);
  nrf_pwm_event_clear(p_registers, NRF_PWM_EVENT_STOPPED);


  /* Now: didn't use interrupt , then pwm can work under standby mode indepedent */
  /*
  nrf_drv_common_irq_enable(priv->irqid, PWM_CONFIG_IRQ_PRIORITY);
  */
  nrf_drv_pwm_playback( p_registers, &priv->sequence,
                        1, NRF_DRV_PWM_FLAG_LOOP);

  return;
}

static int nrf52_pwm_setup(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;
  uint32_t output_pin[NRF52_MAX_PWM_NCHANNELS];
  uint32_t pincfg;
  int i;
  irqstate_t flags;


  if (MAX_CLK < priv->pwm_clk && priv->pwm_clk < MIN_CLK)
    {
      pwmerr("Wrong PWM Clock Config . pwm_clk: %d, max_clk: %d, min_clk: %d\n",
             priv->pwm_clk, MAX_CLK, MIN_CLK);
      return -EBUSY;
    }

  if (NRF_DRV_STATE_POWERED_ON == priv->state)
    {
      pwmerr("PWM module is running\n");
      return -EBUSY;
    }

  /* Configure the PWM output pins */
  memset(output_pin, 0xFF, sizeof(output_pin));

  for (i = 0; i < priv->channel_num; i++)
    {
      pincfg = priv->channels[i].pincfg;
      if (pincfg != NRF52_INVALID_GPIO_PIN)
        {
          bool inverted = pincfg &  NRF52_PWM_PIN_INVERTED;
          pincfg   = pincfg & ~NRF52_PWM_PIN_INVERTED;

          if (inverted)
            {
              nrf_gpio_pin_set(pincfg);
            }
          else
            {
              nrf_gpio_pin_clear(pincfg);
            }

          nrf_gpio_cfg_output(pincfg);
          output_pin[i] = pincfg;
        }
    }

  nrf_pwm_pins_set((FAR NRF_PWM_Type *)priv->base, output_pin);
  nrf_pwm_enable((FAR NRF_PWM_Type *)priv->base);

  /* enable hardware PWM controller */

  flags = enter_critical_section();
  irq_attach(priv->irqid, nrf52_pwm_isr, priv);
  leave_critical_section(flags);

  priv->state = NRF_DRV_STATE_INITIALIZED;

  return OK;
}

static int nrf52_pwm_shutdown(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;
  uint32_t output_pin[NRF_PWM_CHANNEL_COUNT];
  int i;
  irqstate_t flags;

  /* Make sure that the output has been stopped */

  nrf52_pwm_stop(dev);

  /* Disable PWM controller IRQ */

  flags = enter_critical_section();
  irq_attach(priv->irqid, NULL, NULL);
  leave_critical_section(flags);

  /* Then disconnect GPIO from PWM controller & hardware PWM controller */

  for (i = 0; i < NRF_PWM_CHANNEL_COUNT; i++)
    {
      output_pin[i] = NRF_PWM_PIN_NOT_CONNECTED;
    }
  nrf_pwm_disable((FAR NRF_PWM_Type *)priv->base);
  nrf_pwm_pins_set((FAR NRF_PWM_Type *)priv->base, output_pin);

  priv->state = NRF_DRV_STATE_UNINITIALIZED;

  return OK;
}

static int nrf52_pwm_start(FAR struct pwm_lowerhalf_s *dev,
                           FAR const struct pwm_info_s *info)
{
  int ret = OK;
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;

  if (NRF_DRV_STATE_INITIALIZED != priv->state)
    {
      pwmerr("PWM module not initialized \n");
      return -EBUSY;
    }

  ret = nrf_pwm_calculate_param(priv, (void *)info, 0);
  if (OK != ret)
    {
      return ret;
    }

  nrf_pwm_start(priv);
  priv->state = NRF_DRV_STATE_POWERED_ON;

  return ret;
}

static int nrf52_pwm_stop(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;

  if (NRF_DRV_STATE_POWERED_ON != priv->state)
    {
      return OK;
    }

  /* Disable interrupts momentary to stop any ongoing isr processing and
   * disable PWM controller.
   */

  pwminfo("Stop NRF52 PWM ...\n");
  nrf_pwm_task_trigger((FAR NRF_PWM_Type *)priv->base, NRF_PWM_TASK_STOP);

  do
    {
      /* If interrupts are disabled, we must check the STOPPED event here. */

      if (nrf_pwm_event_check((FAR NRF_PWM_Type *)priv->base,
                              NRF_PWM_EVENT_STOPPED))
        {
          pwminfo("NRF52 PWM Stoping Done.\n");
          break;
        }
    }
  while (1);

  up_disable_irq(priv->irqid);
  priv->state = NRF_DRV_STATE_INITIALIZED;

  return OK;
}

static int nrf52_pwm_ioctl(FAR struct pwm_lowerhalf_s *dev, int cmd,
                           unsigned long arg)
{
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;

  pwmwarn("NRF52 PWM IOCTL cmd: %#x...\n", cmd);

  /* There are no platform-specific ioctl commands */
  if (cmd == PWMIOC_START_NRF52_INFO)
    {
      int ret;

      if (NRF_DRV_STATE_UNINITIALIZED == priv->state
          || NRF_DRV_STATE_POWERED_ON == priv->state)
        {
          pwmerr("PWM module not initialized or had been started state [%d]\n",
                 priv->state);
          return -EBUSY;
        }

      ret = nrf_pwm_calculate_param(priv, (void *)arg, 1);
      if (OK != ret)
        {
          return ret;
        }

      nrf_pwm_start(priv);
      priv->state = NRF_DRV_STATE_POWERED_ON;
      return OK;
    }

  if (cmd == PWMIOC_STOP_NRF52_INFO)
    {
      return nrf52_pwm_stop(dev);
    }

  return -EINVAL;
}

FAR int nrf52_pwm_initialize(uint32_t port,
                             struct pwm_pinmux_t *pinmux, uint32_t channels)
{
  int ret;
  struct nrf52_pwm_s  *pwm_dev = NULL;
  struct pwm_pinmux_t *pwm_pinmux;
  char devname[16];

  pwminfo("Starting to register NRF52 PWM\n");

#ifdef CONFIG_NRF52_PWM_M0
  pwm_dev = &g_pwm0_dev;
#endif

#ifdef CONFIG_NRF52_PWM_M1
  pwm_dev = &g_pwm1_dev;
#endif

#ifdef CONFIG_NRF52_PWM_M2
  pwm_dev = &g_pwm2_dev;
#endif

  if (NULL == pwm_dev || NULL == pinmux || channels > NRF52_MAX_PWM_NCHANNELS)
    {
      pwmerr("Invalid Param: port %d, chanel number %d\n", port, channels);
      return EINVAL;
    }
  pwm_pinmux = pwm_dev->channels;

  for (int i = 0; i < channels ; i++)
    {
      pwm_pinmux->pincfg = pinmux[i].pincfg;
      pwm_pinmux->channel = pinmux[i].channel;
    }

  pwm_dev->channel_num = channels;

  /* Register the PWM driver at "/dev/pwm" */

  snprintf(devname, 16, "%s%d", "/dev/pwm", port);
  ret = pwm_register(devname, (FAR struct pwm_lowerhalf_s *)pwm_dev);
  if (ret < 0)
    {
      pwmerr("ERROR: pwm_register pwm %d failed: %d\n", port, ret);
      return ret;
    }

  return ret;
}
